--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vue-sweetalert2": "^2.1.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
